implementado gerador de cpf dentro do objeto

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         <section class="container">
             <h3>Validador de CPF</h3>
             <input type="text" id="cpf" class="cpf" />
+
+            <button id="copy" class="btn-cpf">Copiar</button>
             <br />
             <br />
             <button id="validate" class="btn-cpf">Validar</button>
+            <button id="generate" class="btn-cpf">Gerar CPF</button>
             <div id="result"></div>
         </section>
         <script src="./assets/js/script.js"></script>
