atualizado a imagem de apresentação

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Validador de CPFs</title>
+        <title>Validador e gerador de CPFs</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
         <section class="container">
-            <h3>Validador de CPF</h3>
+            <h3>Validador e gerador de CPFs</h3>
             <input type="text" id="cpf" class="cpf" />
 
             <button id="copy" class="btn-cpf">Copiar</button>
